# promoklocki_notifier

./: .gitignore  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt  scrapper_database@.service  scrapper_notification@.service  scrapper_notification@.timer  setup.cfg  tox.ini
.github/workflows/: tests.yml
db-queries/: CreateDB.sql
promoklocki_notifier/: config.ini  promo_cli.py  promo_database.py  promo_models.py  promo_scrapper.py
src/promoklocki_notifier/: promo_cli.py  promo_database.py  promo_models.py  promo_scrapper.py  promo_utils.py
tests/: test_database.py
