[options]
packages = find:
install_requires = file: requirements.txt
include_package_data = True

[options.entry_points]
console_scripts =
    promo_cli = promoklocki_notifier.promo_cli:main
    promo_start = promoklocki_notifier.promo_scrapper:main

[options.package_data]
promoklocki_notifier = 
    config.ini

[options.packages.find]
where = .

[metadata]
name = promoklocki_notifier
version = attr: promoklocki_notifier.__version__
author = kleist0202
author_email = pk0202@protonmail.com
url = https://github.com/kleist0202/promoklocki_notifier
description = Scrap promoklocki.pl and notify if something e.g. price changed
long_description = file: README.md
long_description_content_type = text/markdown
keywords = promoklocki_notifier, setuptools
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
