[options]
packages = find:
install_requires = file: requirements.txt
include_package_data = True
package_dir =
    =src

[options.entry_points]
console_scripts =
    promo_cli = promoklocki_notifier.promo_cli:main
    promo_start = promoklocki_notifier.promo_scrapper:main

[options.package_data]
promoklocki_notifier = 
    config.ini
    py.typed

[options.packages.find]
where = src/

[metadata]
name = promoklocki_notifier
version = attr: promoklocki_notifier.__version__
author = kleist0202
author_email = pk0202@protonmail.com
url = https://github.com/kleist0202/promoklocki_notifier
description = Scrap promoklocki.pl and notify if something e.g. price changed
long_description = file: README.md
long_description_content_type = text/markdown
keywords = promoklocki_notifier, setuptools
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options.extras_require]
testing =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    mypy>=1.4.1
    flake8>=6.0.0
    tox>=4.6.4

[flake8]
max-line-length = 160
